syntax = "proto3";
package decimal.validator.v1;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

option go_package = "bitbucket.org/decimalteam/go-smart-node/x/validator/types";

message DelegationNFT {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  string delegator_address = 1 [(gogoproto.moretags) = "yaml:\"delegator_address\""];
  string validator_address = 2 [(gogoproto.moretags) = "yaml:\"validator_address\""];
  string denom = 3 [(gogoproto.moretags) = "yaml:\"denom\""];
  string token_id = 4 [(gogoproto.moretags) = "yaml:\"token_id\""];
  string quantity = 5 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"quantity\""
  ];
  string coin = 6 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Coin",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"coin\""
  ];
}

message UnbondingDelegationNFTEntry {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  int64 creation_height = 1 [(gogoproto.moretags) = "yaml:\"creation_height\""];

  google.protobuf.Timestamp completion_time = 2 [
    (gogoproto.stdtime) = true,
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"completion_time\""
  ];

  string denom = 3 [(gogoproto.moretags) = "yaml:\"denom\""];

  string token_id = 4 [(gogoproto.moretags) = "yaml:\"token_id\""];

  string quantity = 5 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"quantity\""
  ];
  string balance = 6 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Coin",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"balance\""
  ];
}